--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,14 @@
 {
   "name": "disaster-preparedness-backend",
   "version": "1.0.0",
-  "description": "Disaster Preparedness Application Backend",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
